--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -347,13 +347,18 @@ static void render_memory_region(FlatView *view,
             // remain = remain - now
             int128_subfrom(&remain, now);
         }
+        // now = min(base + remain, flatrange结束地址) - base
         now = int128_sub(int128_min(int128_add(base, remain),
                                     addrrange_end(view->ranges[i].addr)),
                          base);
+        // base = base + now
         int128_addto(&base, now);
+        // offset_in_region = offset_in_region + now
         offset_in_region += int128_get64(now);
+        // remain = remain - now
         int128_subfrom(&remain, now);
     }
+    // remain != 0
     if (int128_nz(remain)) {
         fr.offset_in_region = offset_in_region;
         fr.addr = addrrange_make(base, remain);
