--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -242,13 +242,13 @@ static FlatView *flatview_new(MemoryRegion *mr_root)
 }
 ```
 
-`render_memory_region()`:
+调用`render_memory_region()`:
 
-- 函数的参数为FlatView *view,代表线性空间试图,维护MemoryRegion和 线性地址的关系(用于gpa→hva的转换)
+- 函数的参数为 `FlatView *view`, 代表线性空间试图,维护MemoryRegion和 线性地址的关系(用于gpa→hva的转换)
 
-- MemoryRegion *mr则为要渲染的MemoryRegion
-- base 标示该MemoryRegion对应最根层MemoryRegion的偏移(最根层的偏移一般为0 ,现在已知的就system_memory和 system_io两个地址空间, 分别代表内存空间和io空间)
-- clip 表示**父空间的地址范围**, 子空间的地址范围是不允许落在父空间的范围外的
+- `MemoryRegion *mr` 则为要渲染的MemoryRegion
+- base 标示该MemoryRegion对应最根层MemoryRegion的偏移(最根层的偏移一般为0 ,现在已知的就 system_memory 和 system_io两个地址空间, 分别代表内存空间和io空间), 这里为0
+- clip 表示**父空间的地址范围**, 子空间的地址范围是不允许落在父空间的范围外的, 如下
 
 ```cpp
 (AddrRange){0, 2^64};
@@ -282,7 +282,7 @@ static void render_memory_region(FlatView *view,
     //它的读写模式就是mr的读写模式
     readonly |= mr->readonly;
     nonvolatile |= mr->nonvolatile;
-    // 找出当前的mr落在父mr的地址区间, 返回base以及大小即start&size
+    // 返回base以及大小即start&size, {0, 2^64}
     tmp = addrrange_make(base, mr->size);
     //计算结果true因此不执行这里。继续向下执行
     if (!addrrange_intersects(tmp, clip)) {
@@ -383,7 +383,12 @@ for循环中处理的就是图中的1, 2, 4.
 
 先把base到 min(remin, start) 这段地址生成一个FlatRange(不和其他地址重合)
 
-将剩余部分地址裁剪出来, 
+将剩余部分地址裁剪出来, 其实还有一部分FlatRange可能要生成新的FlatRange(end到remin)
+
+692-697 行主要把要生成的地址和现有的地址重合部分跳过
+
+695 - 698 行 重合的部分跳过,重合的部分生成FlatRange, 最后剩下的部分为现有FlatRange都不包含的部分, 则在 699-703 生成新的FlatRange插入
+
 
 
 回到`memory_map_init()`函数中，接下来按照同样的模式对IO区域`system_io`和IO地址空间`address_space_io`做了初始化。
