--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -6,6 +6,7 @@
 - [1. 整体概述](#1-整体概述)
 - [2. 回调函数的注册](#2-回调函数的注册)
 - [3. 全局的系统AS和MR的初始化: 不分配GPA/HVA](#3-全局的系统as和mr的初始化-不分配gpahva)
+  - [address_space_init()](#address_space_init)
 - [4. 实际内存的分配GPA/HVA](#4-实际内存的分配gpahva)
   - [4.1. 分配整体内存全局MR(ram)](#41-分配整体内存全局mrram)
     - [4.1.1. memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#411-memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
@@ -154,6 +155,8 @@ fr.addr 标示该FlatRange在线性地址空间的偏移
 地址空间即CPU所能看到的空间，包括Io空间和memory空间，IO空间使用in、out指令访问，有回掉函数。Memory空间使用mov等指令访问。
 
 所以在函数起始，就对`system_memory`分配了内存，然后调用了`memory_region_init`函数对其进行初始化，其中**size**设置为**整个地址空间**：如果是**64位**就是`2^64`.
+
+## address_space_init()
 
 接着调用了`address_space_init`函数对`address_space_memory`进行了初始化。
 
@@ -361,6 +364,7 @@ static void render_memory_region(FlatView *view,
     // remain != 0
     if (int128_nz(remain)) {
         fr.offset_in_region = offset_in_region;
+        // 返回AddressRange{base, remain}
         fr.addr = addrrange_make(base, remain);
         flatview_insert(view, i, &fr);
     }
