--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -6,7 +6,8 @@
 - [1. 整体概述](#1-整体概述)
 - [2. 回调函数的注册](#2-回调函数的注册)
 - [3. 全局的系统AS和MR的初始化: 不分配GPA/HVA](#3-全局的系统as和mr的初始化-不分配gpahva)
-  - [address_space_init()](#address_space_init)
+  - [address_space_init(): 整个AS初始化](#address_space_init-整个as初始化)
+    - [address_space_update_topology(): 设置拓扑flatview](#address_space_update_topology-设置拓扑flatview)
 - [4. 实际内存的分配GPA/HVA](#4-实际内存的分配gpahva)
   - [4.1. 分配整体内存全局MR(ram)](#41-分配整体内存全局mrram)
     - [4.1.1. memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#411-memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
@@ -156,7 +157,7 @@ fr.addr 标示该FlatRange在线性地址空间的偏移
 
 所以在函数起始，就对`system_memory`分配了内存，然后调用了`memory_region_init`函数对其进行初始化，其中**size**设置为**整个地址空间**：如果是**64位**就是`2^64`.
 
-## address_space_init()
+## address_space_init(): 整个AS初始化
 
 接着调用了`address_space_init`函数对`address_space_memory`进行了初始化。
 
@@ -183,6 +184,7 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 
 函数主要做了以下几个工作，设置**addressSpaceh和MR的关联**，设置**其名称**, 把`address_space_memory`加入到**全局的address_spaces链表**中，并通过`address_space_update_topology(as)`**初始化对应的FlatView**, 在这个里面会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**，这个后面做论述。
 
+### address_space_update_topology(): 设置拓扑flatview
 ```cpp
 static void address_space_update_topology(AddressSpace *as)
 {
