--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -8,6 +8,8 @@
 - [3. 全局的系统AS和MR的初始化: 不分配GPA/HVA](#3-全局的系统as和mr的初始化-不分配gpahva)
   - [address_space_init(): 整个AS初始化](#address_space_init-整个as初始化)
     - [address_space_update_topology(): 设置拓扑flatview](#address_space_update_topology-设置拓扑flatview)
+      - [generate_memory_topology(): 生成Flatview](#generate_memory_topology-生成flatview)
+      - [address_space_set_flatview(): 设置FlatView, 会调用KVM](#address_space_set_flatview-设置flatview-会调用kvm)
 - [4. 实际内存的分配GPA/HVA](#4-实际内存的分配gpahva)
   - [4.1. 分配整体内存全局MR(ram)](#41-分配整体内存全局mrram)
     - [4.1.1. memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#411-memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
@@ -198,7 +200,11 @@ static void address_space_update_topology(AddressSpace *as)
     }
     address_space_set_flatview(as);
 }
+```
 
+#### generate_memory_topology(): 生成Flatview
+
+```cpp
 /* Render a memory topology into a list of disjoint absolute ranges. */
 static FlatView *generate_memory_topology(MemoryRegion *mr)
 {
@@ -395,7 +401,56 @@ for循环中处理的就是图中的1, 2, 4.
 
 695 - 698 行 重合的部分跳过,重合的部分生成FlatRange, 最后剩下的部分为现有FlatRange都不包含的部分, 则在 699-703 生成新的FlatRange插入
 
+#### address_space_set_flatview(): 设置FlatView, 会调用KVM
 
+```cpp
+static void address_space_set_flatview(AddressSpace *as)
+{
+    FlatView *old_view = address_space_to_flatview(as);
+    MemoryRegion *physmr = memory_region_get_flatview_root(as->root);
+    FlatView *new_view = g_hash_table_lookup(flat_views, physmr);
+
+    assert(new_view);
+
+    if (old_view == new_view) {
+        return;
+    }
+
+    if (old_view) {
+        flatview_ref(old_view);
+    }
+
+    flatview_ref(new_view);
+
+    if (!QTAILQ_EMPTY(&as->listeners)) {
+        FlatView tmpview = { .nr = 0 }, *old_view2 = old_view;
+
+        if (!old_view2) {
+            old_view2 = &tmpview;
+        }
+        address_space_update_topology_pass(as, old_view2, new_view, false);
+        address_space_update_topology_pass(as, old_view2, new_view, true);
+    }
+
+    /* Writes are protected by the BQL.  */
+    atomic_rcu_set(&as->current_map, new_view);
+    if (old_view) {
+        flatview_unref(old_view);
+    }
+
+    /* Note that all the old MemoryRegions are still alive up to this
+     * point.  This relieves most MemoryListeners from the need to
+     * ref/unref the MemoryRegions they get---unless they use them
+     * outside the iothread mutex, in which case precise reference
+     * counting is necessary.
+     */
+    if (old_view) {
+        flatview_unref(old_view);
+    }
+}
+```
+
+会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**
 
 回到`memory_map_init()`函数中，接下来按照同样的模式对IO区域`system_io`和IO地址空间`address_space_io`做了初始化。
 
@@ -1169,7 +1224,7 @@ static void address_space_update_topology_pass(AddressSpace *as,
 
 # 5. 
 
-对于要添加的FR，调用了 MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)
+对于要添加的FR，调用了 `MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)`
 
 ```cpp
 #define MEMORY_LISTENER_UPDATE_REGION(fr, as, dir, callback)            \
