--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -19,7 +19,7 @@
     - [从pc.ram中划分并加入system_memory的subregion](#从pcram中划分并加入system_memory的subregion)
       - [memory_region_init_alias(): 初始化alias的mr, 不申请内存](#memory_region_init_alias-初始化alias的mr-不申请内存)
       - [memory_region_add_subregion(): subregion注册到全局的system_memory](#memory_region_add_subregion-subregion注册到全局的system_memory)
-- [5. FlatRange](#5-flatrange)
+- [5. 新FlatRange的更新](#5-新flatrange的更新)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -1218,11 +1218,7 @@ static void address_space_update_topology_pass(AddressSpace *as,
 
 函数主体逻辑基本如上所述，那我们注意到，当adding为false时，执行的只有第一个情况下的处理，就是删除frold的操作，其余的处理只有在adding 为true的时候才得以执行。这意图就比较明确，首次执行先删除多余的，下次直接添加或者对日志做更新操作了。
 
- 
-
-总结：qemu内存虚拟化部分先介绍到这里，本来还想把kvm_region_add函数介绍下，但是考虑到篇幅，同时也正好利用该函数过渡到KVM中，不会显得突兀。由于笔者能力有限，文中不免有不对的地方，还望老师们多多指教，大家一起学习，共同进步！！！
-
-# 5. FlatRange
+# 5. 新FlatRange的更新
 
 对于要添加的FR，调用了 `MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)`
 
