--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -6,19 +6,19 @@
 - [1. 整体概述](#1-整体概述)
 - [2. 回调函数的注册](#2-回调函数的注册)
 - [3. 全局的系统AS和MR的初始化: 不分配GPA/HVA](#3-全局的系统as和mr的初始化-不分配gpahva)
-  - [address_space_init(): 整个AS初始化](#address_space_init-整个as初始化)
-    - [address_space_update_topology(): 设置拓扑flatview](#address_space_update_topology-设置拓扑flatview)
-      - [generate_memory_topology(): 生成Flatview](#generate_memory_topology-生成flatview)
-      - [address_space_set_flatview(): 设置FlatView, 会调用KVM](#address_space_set_flatview-设置flatview-会调用kvm)
+  - [3.1. address_space_init(): 整个AS初始化](#31-address_space_init-整个as初始化)
+    - [3.1.1. address_space_update_topology(): 设置拓扑flatview](#311-address_space_update_topology-设置拓扑flatview)
+      - [3.1.1.1. generate_memory_topology(): 生成Flatview](#3111-generate_memory_topology-生成flatview)
+      - [3.1.1.2. address_space_set_flatview(): 设置FlatView, 会调用KVM](#3112-address_space_set_flatview-设置flatview-会调用kvm)
 - [4. 实际内存的分配GPA/HVA](#4-实际内存的分配gpahva)
-  - [4.1. 分配整体内存全局MR(ram)](#41-分配整体内存全局mrram)
+  - [4.1. 分配整体内存全局MR(pc.ram): memory_region_allocate_system_memory](#41-分配整体内存全局mrpcram-memory_region_allocate_system_memory)
     - [4.1.1. memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#411-memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
     - [4.1.2. vmstate_register_ram_global(): ramblock与mr关联](#412-vmstate_register_ram_global-ramblock与mr关联)
   - [4.2. 将整体mr(pc.ram)划分为两个子MR(subregion): 不再申请内存, 即不关联host虚拟内存(HVA)](#42-将整体mrpcram划分为两个子mrsubregion-不再申请内存-即不关联host虚拟内存hva)
-    - [计算above_4g_mem_size和below_4g_mem_size](#计算above_4g_mem_size和below_4g_mem_size)
-    - [从pc.ram中划分并加入system_memory的subregion](#从pcram中划分并加入system_memory的subregion)
-      - [memory_region_init_alias(): 初始化alias的mr, 不申请内存](#memory_region_init_alias-初始化alias的mr-不申请内存)
-      - [memory_region_add_subregion(): subregion注册到全局的system_memory](#memory_region_add_subregion-subregion注册到全局的system_memory)
+    - [4.2.1. 计算above_4g_mem_size和below_4g_mem_size](#421-计算above_4g_mem_size和below_4g_mem_size)
+    - [4.2.2. 从pc.ram中划分并加入system_memory的subregion](#422-从pcram中划分并加入system_memory的subregion)
+      - [4.2.2.1. memory_region_init_alias(): 初始化alias的mr, 不申请内存](#4221-memory_region_init_alias-初始化alias的mr-不申请内存)
+      - [4.2.2.2. memory_region_add_subregion(): subregion注册到全局的system_memory](#4222-memory_region_add_subregion-subregion注册到全局的system_memory)
 - [5. 新FlatRange的更新](#5-新flatrange的更新)
 - [6. 参考](#6-参考)
 
@@ -115,30 +115,6 @@ static void memory_map_init(void)
                           65536);
     address_space_init(&address_space_io, system_io, "I/O");
 }
-
-memory_map_init()                    // 初始化 MemoryRegion 及其对应的 FlatView
- ├─ memory_region_init(system_memory, NULL, "system", UINT64_MAX);   // 初始化 system_memory 全局 MemoryRegion
- ├─ address_space_init(&address_space_memory, system_memory, "memory");;   // 初始化 address_space_memory 全局 AddressSpace, 将 system_memory 作为 root(根MR)
- |   ├─ QTAILQ_INIT(&as->listeners);      // 初始化该 AddressSpace 的 listeners 链表
- |   ├─ QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);       // 初始化该 AddressSpace 为全局 as链表address_spaces的节点(通过as的 address_spaces_link 域)
- |   └─ address_space_update_topology(as)      // 为 AddressSpace 生成 FlatView
- |   |   ├─ MemoryRegion *physmr = memory_region_get_flatview_root(as->root);  // 获取as指向的mr 
- |   |   ├─ generate_memory_topology(physmr)   // 将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
- |   |   |   ├─ view = flatview_new(mr)     // 参数其实就是 physmr
- |   |   |   ├─ render_memory_region(&view, mr, ...) // 根据 mr 生成 view
- |   |   |   └─ flatview_simplify(&view) // 合并相邻的 FlatRange
- |   |   └─ address_space_set_flatview(as);
- |   |       ├─ address_space_update_topology_pass(AddressSpce, FlatView_old, FlatView_new) // 遍历FlatView的所有FlatRange, 也就是得到若干个 MemoryRegionSection, 将其注册到KVM
- |   |       |   └─ MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)        // 回调函数 region_add, 对应的是kvm_region_add()
- |   |       |   └─ kvm_region_add()        // region_add 对应的回调实现
- |   |       |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot
- |   |       |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
- |   |       |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION)
- |   |       |
- |   └─ address_space_update_ioeventfds(as)   
- |
- ├─ memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io", 65536);   // 初始化 system_io 全局 MemoryRegion
- └─ address_space_init(&address_space_io, system_io, "I/O");   // 初始化 address_space_io 全局 AddressSpace, 将 system_io 作为 root(根MR)
 ```
 
 首先MemoryRegion有两种,一种为**纯容器**(逻辑上的概念),一种为**物理内存**(物理内存又有几种: mmio内存. ram, rom, ioport),
@@ -159,7 +135,7 @@ fr.addr 标示该FlatRange在线性地址空间的偏移
 
 所以在函数起始，就对`system_memory`分配了内存，然后调用了`memory_region_init`函数对其进行初始化，其中**size**设置为**整个地址空间**：如果是**64位**就是`2^64`.
 
-## address_space_init(): 整个AS初始化
+## 3.1. address_space_init(): 整个AS初始化
 
 接着调用了`address_space_init`函数对`address_space_memory`进行了初始化。
 
@@ -186,7 +162,7 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 
 函数主要做了以下几个工作，设置**addressSpaceh和MR的关联**，设置**其名称**, 把`address_space_memory`加入到**全局的address_spaces链表**中，并通过`address_space_update_topology(as)`**初始化对应的FlatView**, 在这个里面会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**，这个后面做论述。
 
-### address_space_update_topology(): 设置拓扑flatview
+### 3.1.1. address_space_update_topology(): 设置拓扑flatview
 ```cpp
 static void address_space_update_topology(AddressSpace *as)
 {
@@ -202,7 +178,7 @@ static void address_space_update_topology(AddressSpace *as)
 }
 ```
 
-#### generate_memory_topology(): 生成Flatview
+#### 3.1.1.1. generate_memory_topology(): 生成Flatview
 
 ```cpp
 /* Render a memory topology into a list of disjoint absolute ranges. */
@@ -401,7 +377,7 @@ for循环中处理的就是图中的1, 2, 4.
 
 695 - 698 行 重合的部分跳过,重合的部分生成FlatRange, 最后剩下的部分为现有FlatRange都不包含的部分, 则在 699-703 生成新的FlatRange插入
 
-#### address_space_set_flatview(): 设置FlatView, 会调用KVM
+#### 3.1.1.2. address_space_set_flatview(): 设置FlatView, 会调用KVM
 
 ```cpp
 static void address_space_set_flatview(AddressSpace *as)
@@ -617,7 +593,7 @@ void pc_memory_init(PCMachineState *pcms,
 
 3. 最后需要调用`memory_region_transaction_commit()`函数提交修改。
 
-## 4.1. 分配整体内存全局MR(ram)
+## 4.1. 分配整体内存全局MR(pc.ram): memory_region_allocate_system_memory
 
 为虚拟机内存"pc.ram"和"pc.rom"都分别生成了新的MR, 然后分配内存, 这里看"pc.ram"的内存分配`memory_region_allocate_system_memory(ram, NULL, "pc.ram", machine->ram_size);`, 对于非大页最终会调用到函数`memory_region_init_ram_shared_nomigrate()`
 
@@ -814,7 +790,7 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
 
 在创建好了ram并且分配好了空间之后，创建了**两个mr alias**，`ram_below_4g`以及`ram_above_4g`，这两个mr分别指向**ram的低4g**以及**高4g空间**，这两个alias是挂在**根system\_memory mr下面**的, 即高低端内存（也不一定是32bit机器）
 
-### 计算above_4g_mem_size和below_4g_mem_size
+### 4.2.1. 计算above_4g_mem_size和below_4g_mem_size
 
 对于 `x86_64`, 需要给system io留0.5G内存, 检查虚拟机内存是否大于4G(ram_size是否大于3.5G), 计算如下
 
@@ -844,7 +820,7 @@ pc_init1()
 - 内存小于3.5G, `below_4g_mem_size = size`, `above = 0`;
 
 
-### 从pc.ram中划分并加入system_memory的subregion
+### 4.2.2. 从pc.ram中划分并加入system_memory的subregion
 
 ```cpp
     // 创建新的 mr
@@ -866,7 +842,7 @@ pc_init1()
     }
 ```
 
-#### memory_region_init_alias(): 初始化alias的mr, 不申请内存
+#### 4.2.2.1. memory_region_init_alias(): 初始化alias的mr, 不申请内存
 
 `memory_region_init_alias()`函数便对**两个子MR进行初始化**，这里就**不再进行内存的申请**，主要是设置`alias`和`alias_offset`字段，代码如下。
 
@@ -888,7 +864,7 @@ void memory_region_init_alias(MemoryRegion *mr,
 
 12月16日
 
-#### memory_region_add_subregion(): subregion注册到全局的system_memory
+#### 4.2.2.2. memory_region_add_subregion(): subregion注册到全局的system_memory
 
 在初始化完毕，需要调用`memory_region_add_subregion()`函数把**子MR**注册到**全局的system_memory**。该函数实现是比较简单的，但是需要重点介绍下，因为这里执行了关键的更新操作。
 
