--- Auto-Git Commit ---

--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -159,39 +159,38 @@ int main()
  |           ├─ pc_memory_init() // 【4】内存初始化，从 QEMU 进程的地址空间中进行实际的内存分配
  |           |   ├─ MemoryRegion *ram = g_malloc(sizeof(*ram)); // 新建MR, "pc.ram"
  |           |   ├─ memory_region_allocate_system_memory(ram, NULL, "pc.ram", machine->ram_size); // 创建 pc.ram, pc.rom 并分配内存
- |           |   |   ├─ allocate_system_memory_nonnuma()
- |           |   |   |   |─ memory_region_init_ram_nomigrate()
- |           |   |   |   |   |─ memory_region_init(mr, owner, name, size);
- |           |   |   |   |   └─ mr->ram_block = qemu_ram_alloc(size, share, mr, &err); // 仅仅root MR有自己RAMBlock(GPA)
- |           |   |   |   |       └─ qemu_ram_alloc_internal();
- |           |   |   |   |           |─ RAMBlock = g_malloc0(sizeof(*new_block)); // 创建RAMBlock并且初始化
- |           |   |   |   |           └─ ram_block_add(); // 
- |           |   |   |   |               |─ new_block->offset = find_ram_offset(new_block->max_length); // 遍历全局ram_list所有区块, 找到满足长度的空间, 并将ramblock安插进去
- |           |   |   |   |               |─ new_block->host = phys_mem_alloc(new_block->max_length, &new_block->mr->align, shared); // 在host上分配虚拟内存
- |           |   |   |   |               |─ memory_try_enable_merging(new_block->host, new_block->max_length); // 
- |           |   |   |   └─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
- |           |   |
- |           |   ├─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
- |           |   |   └─ vmstate_register_ram()
- |           |   |       └─ qemu_ram_set_idstr()
+ |           |   |   └─ allocate_system_memory_nonnuma()
+ |           |   |       |─ memory_region_init_ram_nomigrate()
+ |           |   |       |   |─ memory_region_init(mr, owner, name, size);
+ |           |   |       |   └─ mr->ram_block = qemu_ram_alloc(size, share, mr, &err); // 仅仅root MR有自己RAMBlock(GPA)
+ |           |   |       |       └─ qemu_ram_alloc_internal();
+ |           |   |       |           |─ RAMBlock = g_malloc0(sizeof(*new_block)); // 创建RAMBlock并且初始化
+ |           |   |       |           └─ ram_block_add(); // 
+ |           |   |       |               |─ new_block->offset = find_ram_offset(new_block->max_length); // 遍历全局ram_list所有区块, 找到满足长度的空间, 并将ramblock安插进去
+ |           |   |       |               |─ new_block->host = phys_mem_alloc(new_block->max_length, &new_block->mr->align, shared); // 在host上分配虚拟内存
+ |           |   |       |               |─ memory_try_enable_merging(new_block->host, new_block->max_length); // 
+ |           |   |       └─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
+ |           |   |           └─ vmstate_register_ram()
+ |           |   |               └─ qemu_ram_set_idstr()
  |           |   |
  |           |   ├─ memory_region_init_alias()    // 初始化 ram_below_4g, ram_above_4g
- |           |   └─ memory_region_add_subregion() // 在 system_memory 中添加 subregions
- |           |       └─ memory_region_add_subregion_common()
- |           |           └─ memory_region_update_topology() // 为 MemoryRegion 生成 FlatView
- |           |               └─ address_space_update_topology() // as->current_map = new_view   
- |           |                   ├─ generate_memory_topology()  // 将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
- |           |                   |   ├─ flatview_init(&view)
- |           |                   |   ├─ render_memory_region(&view, mr, ...) // 根据 mr 生成 view
- |           |                   |   └─ flatview_simplify(&view) // 合并相邻的 FlatRange
- |           |                   |
- |           |                   ├─ address_space_update_topology_pass()
- |           |                   |   └─ kvm_region_add()        // region_add 对应的回调实现
- |           |                   |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot
- |           |                   |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
- |           |                   |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION)
- |           |                   |
- |           |                   └─ address_space_update_ioeventfds()  
+ |           |   |─ memory_region_add_subregion() // 在 system_memory 中添加 subregions
+ |           |   |   └─ memory_region_add_subregion_common()
+ |           |   |       └─ memory_region_update_topology() // 为 MemoryRegion 生成 FlatView
+ |           |   |            └─ address_space_update_topology() // as->current_map = new_view   
+ |           |   |                ├─ generate_memory_topology()  // 将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
+ |           |   |                |   ├─ flatview_init(&view)
+ |           |   |                |   ├─ render_memory_region(&view, mr, ...) // 根据 mr 生成 view
+ |           |   |                |   └─ flatview_simplify(&view) // 合并相邻的 FlatRange
+ |           |   |                |
+ |           |   |                ├─ address_space_update_topology_pass()
+ |           |   |                |   └─ kvm_region_add()        // region_add 对应的回调实现
+ |           |   |                |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot
+ |           |   |                |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
+ |           |   |                |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION)
+ |           |   |                |
+ |           |   |                └─ address_space_update_ioeventfds()  
+ |           |   ├─ e820_add_entry(0, x86ms->below_4g_mem_size, E820_RAM)    // 初始化 ram_below_4g, ram_above_4g
  |           |
  |           ├─ i440fx_init()
  |           ├─ ioapic_init(gsi_state)
