--- Auto-Git Commit ---

--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -79,7 +79,7 @@ int main()
  |       |   ├─ kvm_check_extension()        // 与kvm交互, 架构相关特性检查
  |       |   ├─ kvm_vm_ioctl(s, KVM_SET_IDENTITY_MAP_ADDR, &identity_base);        // 与kvm交互, 架构相关特性检查
  |       |   ├─ kvm_vm_ioctl(s, KVM_SET_TSS_ADDR, identity_base + 0x1000);        // 与kvm交互, 架构相关特性检查
- |       |   ├─ e820_add_entry(identity_base, 0x4000, E820_RESERVED);        // 与kvm交互, 架构相关特性检查
+ |       |   ├─ e820_add_entry(identity_base, 0x4000, E820_RESERVED);        // 
  |       ├─ kvm_irqchip_create()             // 创建中断管理
  |       └─ memory_listener_register(&kvm_memory_listener) // 注册 kvm_memory_listener
  |
@@ -173,8 +173,9 @@ int main()
  |           |   |           └─ vmstate_register_ram()
  |           |   |               └─ qemu_ram_set_idstr()
  |           |   |
- |           |   ├─ memory_region_init_alias()    // 初始化 ram_below_4g, ram_above_4g
- |           |   |─ memory_region_add_subregion() // 在 system_memory 中添加 subregions
+ |           |   ├─ MemoryRegion *ram_below_4g = g_malloc(sizeof(*ram_below_4g)); // 新建MR, "ram-below_4g" 
+ |           |   ├─ memory_region_init_alias(ram_below_4g, NULL, "ram-below_4g", ram, 0, x86ms->below_4g_mem_size);    // 初始化 ram_below_4g, 如果x86ms->above_4g_mem_size大于0, 针对这个也执行memory_region_init_alias, memory_region_add_subregion和e820_add_entry.
+ |           |   |─ memory_region_add_subregion(system_memory, 0, ram_below_4g); // 在 system_memory 中添加 subregions, "ram_below_4g" MR
  |           |   |   └─ memory_region_add_subregion_common()
  |           |   |       └─ memory_region_update_topology() // 为 MemoryRegion 生成 FlatView
  |           |   |            └─ address_space_update_topology() // as->current_map = new_view   
@@ -190,7 +191,8 @@ int main()
  |           |   |                |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION)
  |           |   |                |
  |           |   |                └─ address_space_update_ioeventfds()  
- |           |   ├─ e820_add_entry(0, x86ms->below_4g_mem_size, E820_RAM)    // 初始化 ram_below_4g, ram_above_4g
+ |           |   ├─ e820_add_entry(0, x86ms->below_4g_mem_size, E820_RAM)    // 
+ |           |   ├─ machine->device_memory = g_malloc0();    // 
  |           |
  |           ├─ i440fx_init()
  |           ├─ ioapic_init(gsi_state)
