--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -7,9 +7,6 @@
 - [2. 回调函数的注册](#2-回调函数的注册)
 - [3. 全局的系统AS和MR的初始化: 不分配GPA/HVA](#3-全局的系统as和mr的初始化-不分配gpahva)
   - [3.1. address_space_init(): 整个AS初始化](#31-address_space_init-整个as初始化)
-    - [3.1.1. address_space_update_topology(): 设置拓扑flatview](#311-address_space_update_topology-设置拓扑flatview)
-      - [3.1.1.1. generate_memory_topology(): 生成Flatview](#3111-generate_memory_topology-生成flatview)
-      - [3.1.1.2. address_space_set_flatview(): 设置FlatView, 会调用KVM](#3112-address_space_set_flatview-设置flatview-会调用kvm)
 - [4. 实际内存的分配GPA/HVA](#4-实际内存的分配gpahva)
   - [4.1. 分配整体内存全局MR(pc.ram): memory_region_allocate_system_memory](#41-分配整体内存全局mrpcram-memory_region_allocate_system_memory)
     - [4.1.1. memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#411-memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
@@ -19,6 +16,9 @@
     - [4.2.2. 从pc.ram中划分并加入system_memory的subregion](#422-从pcram中划分并加入system_memory的subregion)
       - [4.2.2.1. memory_region_init_alias(): 初始化alias的mr, 不申请内存](#4221-memory_region_init_alias-初始化alias的mr-不申请内存)
       - [4.2.2.2. memory_region_add_subregion(): subregion注册到全局的system_memory](#4222-memory_region_add_subregion-subregion注册到全局的system_memory)
+      - [3.1.1. address_space_update_topology(): 设置拓扑flatview](#311-address_space_update_topology-设置拓扑flatview)
+      - [3.1.1.1. generate_memory_topology(): 生成Flatview](#3111-generate_memory_topology-生成flatview)
+      - [3.1.1.2. address_space_set_flatview(): 设置FlatView, 会调用KVM](#3112-address_space_set_flatview-设置flatview-会调用kvm)
 - [5. 新FlatRange的更新](#5-新flatrange的更新)
 - [6. 参考](#6-参考)
 
@@ -154,7 +154,7 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
     QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);
     /* AddressSpace的名称 */
     as->name = g_strdup(name ? name : "anonymous");
-    // 初始化对应的 flatview
+    // 初始化对应的 flatview, 设置拓扑
     address_space_update_topology(as);
     address_space_update_ioeventfds(as);
 }
@@ -162,271 +162,7 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 
 函数主要做了以下几个工作，设置**addressSpaceh和MR的关联**，设置**其名称**, 把`address_space_memory`加入到**全局的address_spaces链表**中，并通过`address_space_update_topology(as)`**初始化对应的FlatView**, 在这个里面会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**，这个后面做论述。
 
-### 3.1.1. address_space_update_topology(): 设置拓扑flatview
-```cpp
-static void address_space_update_topology(AddressSpace *as)
-{
-    // 获取as的mr, 如果是alias, 使用原始mr
-    MemoryRegion *physmr = memory_region_get_flatview_root(as->root);
-
-    flatviews_init();
-    if (!g_hash_table_lookup(flat_views, physmr)) {
-        // 核心函数, 基于root MR生成 flatview
-        generate_memory_topology(physmr);
-    }
-    address_space_set_flatview(as);
-}
-```
-
-#### 3.1.1.1. generate_memory_topology(): 生成Flatview
-
-```cpp
-/* Render a memory topology into a list of disjoint absolute ranges. */
-static FlatView *generate_memory_topology(MemoryRegion *mr)
-{
-    int i;
-    FlatView *view;
-
-    view = flatview_new(mr);
-
-    if (mr) {
-        /*
-          * 将mr所管理的内存进行平坦展开为FlatView,通过view返回
-          * addrrange_make(int128_zero(), int128_2_64()) --> 指定一个GUEST内存空间，起始GPA等于0，大小等于2^64，可以想象成GUEST的整个物理地址空间
-          */
-        render_memory_region(view, mr, int128_zero(),
-                             addrrange_make(int128_zero(), int128_2_64()),
-                             false, false);
-    }
-    /*简化FlatView，将View中的FlatRange能合并的都合并*/
-    flatview_simplify(view);
-
-    view->dispatch = address_space_dispatch_new(view);
-    for (i = 0; i < view->nr; i++) {
-        MemoryRegionSection mrs =
-            section_from_flat_range(&view->ranges[i], view);
-        flatview_add_to_dispatch(view, &mrs);
-    }
-    address_space_dispatch_compact(view->dispatch);
-    g_hash_table_replace(flat_views, mr, view);
-
-    return view;
-}
-
-static FlatView *flatview_new(MemoryRegion *mr_root)
-{
-    FlatView *view;
-    // 新分配一个FlatView并初始化
-    view = g_new0(FlatView, 1);
-    // 引用计数
-    view->ref = 1;
-    // 该FlatView的root指向对应的MR
-    view->root = mr_root;
-    memory_region_ref(mr_root);
-    trace_flatview_new(view, mr_root);
-
-    return view;
-}
-```
-
-调用`render_memory_region()`:
-
-- 函数的参数为 `FlatView *view`, 代表线性空间试图,维护MemoryRegion和 线性地址的关系(用于gpa→hva的转换)
-
-- `MemoryRegion *mr` 则为要渲染的MemoryRegion
-- base 标示该MemoryRegion对应最根层MemoryRegion的偏移(最根层的偏移一般为0 ,现在已知的就 system_memory 和 system_io两个地址空间, 分别代表内存空间和io空间), 这里为0
-- clip 表示**父空间的地址范围**, 子空间的地址范围是不允许落在父空间的范围外的, 如下
-
-```cpp
-(AddrRange){0, 2^64};
-```
-
-```cpp
-/* Render a memory region into the global view.  Ranges in @view obscure
- * ranges in @mr.
- */
-static void render_memory_region(FlatView *view,
-                                 MemoryRegion *mr,
-                                 Int128 base,
-                                 AddrRange clip,
-                                 bool readonly,
-                                 bool nonvolatile)
-{
-    MemoryRegion *subregion;
-    unsigned i;
-    hwaddr offset_in_region;
-    Int128 remain;
-    Int128 now;
-    FlatRange fr;
-    AddrRange tmp;
-
-    if (!mr->enabled) {
-        return;
-    }
-    // mr的addr什么时候初始化的?
-    // base = base + mr->addr
-    int128_addto(&base, int128_make64(mr->addr));
-    //它的读写模式就是mr的读写模式
-    readonly |= mr->readonly;
-    nonvolatile |= mr->nonvolatile;
-    // 返回base以及大小即start&size, {0, 2^64}
-    tmp = addrrange_make(base, mr->size);
-    //计算结果true因此不执行这里。继续向下执行
-    if (!addrrange_intersects(tmp, clip)) {
-        return;
-    }
-    //结果为start=0，size=0xffffffffffffffffui64
-    clip = addrrange_intersection(tmp, clip);
-    //对别名空间进行渲染
-    if (mr->alias) {
-        int128_subfrom(&base, int128_make64(mr->alias->addr));
-        int128_subfrom(&base, int128_make64(mr->alias_offset));
-        //以上两行的计算得出别名空间的大小, 然后渲染别名空间
-        render_memory_region(view, mr->alias, base, clip,
-                             readonly, nonvolatile);
-        return;
-    }
-    // //渲染子region
-    /* Render subregions in priority order. */
-    QTAILQ_FOREACH(subregion, &mr->subregions, subregions_link) {
-        render_memory_region(view, subregion, base, clip,
-                             readonly, nonvolatile);
-    }
-    //teminates为false表示该容器为纯容器只需要渲染不需要生成flatrange
-    if (!mr->terminates) {
-        return;
-    }
-    //计算Mr在线性空间的大小和偏移, 返回结果为0
-    offset_in_region = int128_get64(int128_sub(clip.start, base));
-    // 为0
-    base = clip.start;
-    // 为0xffffffffffffffffui64
-    remain = clip.size;
-    //Flatrange成员的初始化
-    fr.mr = mr;
-    fr.dirty_log_mask = memory_region_get_dirty_log_mask(mr);
-    fr.romd_mode = mr->romd_mode;
-    fr.readonly = readonly;
-    fr.nonvolatile = nonvolatile;
-    // 遍历FlatView中的FlatRanges, flatview的nr什么时候初始化？
-    /* Render the region itself into any gaps left by the current view. */
-    for (i = 0; i < view->nr && int128_nz(remain); ++i) {
-        // 将flatrange结束地址小于mr开始地址的FlatRange排除掉
-        if (int128_ge(base, addrrange_end(view->ranges[i].addr))) {
-            continue;
-        }
-        // FlatRange开始地址大于mr开始地址
-        if (int128_lt(base, view->ranges[i].addr.start)) {
-            //找出两个中小的赋值给now, min(remain, flatrange.start - base)
-            now = int128_min(remain,
-                             int128_sub(view->ranges[i].addr.start, base));
-            // flatrange在mr中的偏移, 第一次是0
-            fr.offset_in_region = offset_in_region;
-            //完成fr的addrfange的赋值, base到min(remin, start)
-            fr.addr = addrrange_make(base, now);
-            // 将flatrange插入flatview
-            flatview_insert(view, i, &fr);
-            ++i;
-            // base = base + now
-            int128_addto(&base, now);
-            // offset_in_region = offset_in_region + now
-            offset_in_region += int128_get64(now);
-            // remain = remain - now
-            int128_subfrom(&remain, now);
-        }
-        // now = min(base + remain, flatrange结束地址) - base
-        now = int128_sub(int128_min(int128_add(base, remain),
-                                    addrrange_end(view->ranges[i].addr)),
-                         base);
-        // base = base + now
-        int128_addto(&base, now);
-        // offset_in_region = offset_in_region + now
-        offset_in_region += int128_get64(now);
-        // remain = remain - now
-        int128_subfrom(&remain, now);
-    }
-    // remain != 0
-    if (int128_nz(remain)) {
-        fr.offset_in_region = offset_in_region;
-        // 返回AddressRange{base, remain}
-        fr.addr = addrrange_make(base, remain);
-        flatview_insert(view, i, &fr);
-    }
-}
-```
-
-FlatRange在FlatView中是按照地址升序来排列的,另外不存在地址重合的FlatRange.
-
-后面把结束地址小于MemoryRegion开始地址的FlatRange都排除掉,因为他们的地址和我们要生成的地址有冲突
-
-剩下的地址分为如下四种情况
-
-![2020-03-11-11-18-13.png](./images/2020-03-11-11-18-13.png)
-
-base 表示要生成的地址空间的开始 remin表示要生成地址空间的结尾
-
-start表示下一个要比较的地址空间的开始, end表示下一个要比较地址空间的结尾
-
-for循环中处理的就是图中的1, 2, 4.
-
-先把base到 min(remin, start) 这段地址生成一个FlatRange(不和其他地址重合)
-
-将剩余部分地址裁剪出来, 其实还有一部分FlatRange可能要生成新的FlatRange(end到remin)
-
-692-697 行主要把要生成的地址和现有的地址重合部分跳过
-
-695 - 698 行 重合的部分跳过,重合的部分生成FlatRange, 最后剩下的部分为现有FlatRange都不包含的部分, 则在 699-703 生成新的FlatRange插入
-
-#### 3.1.1.2. address_space_set_flatview(): 设置FlatView, 会调用KVM
-
-```cpp
-static void address_space_set_flatview(AddressSpace *as)
-{
-    FlatView *old_view = address_space_to_flatview(as);
-    MemoryRegion *physmr = memory_region_get_flatview_root(as->root);
-    FlatView *new_view = g_hash_table_lookup(flat_views, physmr);
-
-    assert(new_view);
-
-    if (old_view == new_view) {
-        return;
-    }
-
-    if (old_view) {
-        flatview_ref(old_view);
-    }
-
-    flatview_ref(new_view);
-
-    if (!QTAILQ_EMPTY(&as->listeners)) {
-        FlatView tmpview = { .nr = 0 }, *old_view2 = old_view;
-
-        if (!old_view2) {
-            old_view2 = &tmpview;
-        }
-        address_space_update_topology_pass(as, old_view2, new_view, false);
-        address_space_update_topology_pass(as, old_view2, new_view, true);
-    }
-
-    /* Writes are protected by the BQL.  */
-    atomic_rcu_set(&as->current_map, new_view);
-    if (old_view) {
-        flatview_unref(old_view);
-    }
-
-    /* Note that all the old MemoryRegions are still alive up to this
-     * point.  This relieves most MemoryListeners from the need to
-     * ref/unref the MemoryRegions they get---unless they use them
-     * outside the iothread mutex, in which case precise reference
-     * counting is necessary.
-     */
-    if (old_view) {
-        flatview_unref(old_view);
-    }
-}
-```
-
-会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**
+`address_space_update_topology()`调用下面会分析.
 
 回到`memory_map_init()`函数中，接下来按照同样的模式对IO区域`system_io`和IO地址空间`address_space_io`做了初始化。
 
@@ -953,7 +689,282 @@ void memory_region_transaction_commit(void)
 }
 ```
 
-可以看到，这里listener的作用就凸显出来了。对于**每个address_space**，调用address_space_update_topology()执行更新。里面涉及两个重要的函数generate_memory_topology和address_space_update_topology_pass。前者对于一个给定的MR，生成其对应的FlatView，而后者则根据oldview和newview对当前视图进行更新。我们还是看下address_space_update_topology函数代码
+可以看到，这里listener的作用就凸显出来了。对于**每个address_space**，调用address_space_update_topology()执行更新。里面涉及两个重要的函数generate_memory_topology和address_space_update_topology_pass。前者对于一个给定的MR，生成其对应的FlatView，而后者则根据oldview和newview对当前视图进行更新。
+
+我们还是看下address_space_update_topology函数代码
+
+#### 3.1.1. address_space_update_topology(): 设置拓扑flatview
+
+这个在`address_space_init()`时候也会调用
+
+```cpp
+static void address_space_update_topology(AddressSpace *as)
+{
+    // 获取as的mr, 如果是alias, 使用原始mr
+    MemoryRegion *physmr = memory_region_get_flatview_root(as->root);
+
+    flatviews_init();
+    if (!g_hash_table_lookup(flat_views, physmr)) {
+        // 核心函数, 基于root MR生成 flatview
+        generate_memory_topology(physmr);
+    }
+    address_space_set_flatview(as);
+}
+```
+
+##### 3.1.1.1. generate_memory_topology(): 生成Flatview
+
+```cpp
+/* Render a memory topology into a list of disjoint absolute ranges. */
+static FlatView *generate_memory_topology(MemoryRegion *mr)
+{
+    int i;
+    FlatView *view;
+
+    view = flatview_new(mr);
+
+    if (mr) {
+        /*
+          * 将mr所管理的内存进行平坦展开为FlatView,通过view返回
+          * addrrange_make(int128_zero(), int128_2_64()) --> 指定一个GUEST内存空间，起始GPA等于0，大小等于2^64，可以想象成GUEST的整个物理地址空间
+          */
+        render_memory_region(view, mr, int128_zero(),
+                             addrrange_make(int128_zero(), int128_2_64()),
+                             false, false);
+    }
+    /*简化FlatView，将View中的FlatRange能合并的都合并*/
+    flatview_simplify(view);
+
+    view->dispatch = address_space_dispatch_new(view);
+    for (i = 0; i < view->nr; i++) {
+        MemoryRegionSection mrs =
+            section_from_flat_range(&view->ranges[i], view);
+        flatview_add_to_dispatch(view, &mrs);
+    }
+    address_space_dispatch_compact(view->dispatch);
+    g_hash_table_replace(flat_views, mr, view);
+
+    return view;
+}
+
+static FlatView *flatview_new(MemoryRegion *mr_root)
+{
+    FlatView *view;
+    // 新分配一个FlatView并初始化
+    view = g_new0(FlatView, 1);
+    // 引用计数
+    view->ref = 1;
+    // 该FlatView的root指向对应的MR
+    view->root = mr_root;
+    memory_region_ref(mr_root);
+    trace_flatview_new(view, mr_root);
+
+    return view;
+}
+```
+
+调用`render_memory_region()`:
+
+- 函数的参数为 `FlatView *view`, 代表线性空间试图,维护MemoryRegion和 线性地址的关系(用于gpa→hva的转换)
+
+- `MemoryRegion *mr` 则为要渲染的MemoryRegion
+- base 标示该MemoryRegion对应最根层MemoryRegion的偏移(最根层的偏移一般为0 ,现在已知的就 system_memory 和 system_io两个地址空间, 分别代表内存空间和io空间), 这里为0
+- clip 表示**父空间的地址范围**, 子空间的地址范围是不允许落在父空间的范围外的, 如下
+
+```cpp
+(AddrRange){0, 2^64};
+```
+
+```cpp
+/* Render a memory region into the global view.  Ranges in @view obscure
+ * ranges in @mr.
+ */
+static void render_memory_region(FlatView *view,
+                                 MemoryRegion *mr,
+                                 Int128 base,
+                                 AddrRange clip,
+                                 bool readonly,
+                                 bool nonvolatile)
+{
+    MemoryRegion *subregion;
+    unsigned i;
+    hwaddr offset_in_region;
+    Int128 remain;
+    Int128 now;
+    FlatRange fr;
+    AddrRange tmp;
+
+    if (!mr->enabled) {
+        return;
+    }
+    // mr的addr什么时候初始化的?
+    // base = base + mr->addr
+    int128_addto(&base, int128_make64(mr->addr));
+    //它的读写模式就是mr的读写模式
+    readonly |= mr->readonly;
+    nonvolatile |= mr->nonvolatile;
+    // 返回base以及大小即start&size, {0, 2^64}
+    tmp = addrrange_make(base, mr->size);
+    //计算结果true因此不执行这里。继续向下执行
+    if (!addrrange_intersects(tmp, clip)) {
+        return;
+    }
+    //结果为start=0，size=0xffffffffffffffffui64
+    clip = addrrange_intersection(tmp, clip);
+    //对别名空间进行渲染
+    if (mr->alias) {
+        int128_subfrom(&base, int128_make64(mr->alias->addr));
+        int128_subfrom(&base, int128_make64(mr->alias_offset));
+        //以上两行的计算得出别名空间的大小, 然后渲染别名空间
+        render_memory_region(view, mr->alias, base, clip,
+                             readonly, nonvolatile);
+        return;
+    }
+    // //渲染子region
+    /* Render subregions in priority order. */
+    QTAILQ_FOREACH(subregion, &mr->subregions, subregions_link) {
+        render_memory_region(view, subregion, base, clip,
+                             readonly, nonvolatile);
+    }
+    //teminates为false表示该容器为纯容器只需要渲染不需要生成flatrange
+    if (!mr->terminates) {
+        return;
+    }
+    //计算Mr在线性空间的大小和偏移, 返回结果为0
+    offset_in_region = int128_get64(int128_sub(clip.start, base));
+    // 为0
+    base = clip.start;
+    // 为0xffffffffffffffffui64
+    remain = clip.size;
+    //Flatrange成员的初始化
+    fr.mr = mr;
+    fr.dirty_log_mask = memory_region_get_dirty_log_mask(mr);
+    fr.romd_mode = mr->romd_mode;
+    fr.readonly = readonly;
+    fr.nonvolatile = nonvolatile;
+    // 遍历FlatView中的FlatRanges, flatview的nr什么时候初始化？
+    /* Render the region itself into any gaps left by the current view. */
+    for (i = 0; i < view->nr && int128_nz(remain); ++i) {
+        // 将flatrange结束地址小于mr开始地址的FlatRange排除掉
+        if (int128_ge(base, addrrange_end(view->ranges[i].addr))) {
+            continue;
+        }
+        // FlatRange开始地址大于mr开始地址
+        if (int128_lt(base, view->ranges[i].addr.start)) {
+            //找出两个中小的赋值给now, min(remain, flatrange.start - base)
+            now = int128_min(remain,
+                             int128_sub(view->ranges[i].addr.start, base));
+            // flatrange在mr中的偏移, 第一次是0
+            fr.offset_in_region = offset_in_region;
+            //完成fr的addrfange的赋值, base到min(remin, start)
+            fr.addr = addrrange_make(base, now);
+            // 将flatrange插入flatview
+            flatview_insert(view, i, &fr);
+            ++i;
+            // base = base + now
+            int128_addto(&base, now);
+            // offset_in_region = offset_in_region + now
+            offset_in_region += int128_get64(now);
+            // remain = remain - now
+            int128_subfrom(&remain, now);
+        }
+        // now = min(base + remain, flatrange结束地址) - base
+        now = int128_sub(int128_min(int128_add(base, remain),
+                                    addrrange_end(view->ranges[i].addr)),
+                         base);
+        // base = base + now
+        int128_addto(&base, now);
+        // offset_in_region = offset_in_region + now
+        offset_in_region += int128_get64(now);
+        // remain = remain - now
+        int128_subfrom(&remain, now);
+    }
+    // remain != 0
+    if (int128_nz(remain)) {
+        fr.offset_in_region = offset_in_region;
+        // 返回AddressRange{base, remain}
+        fr.addr = addrrange_make(base, remain);
+        flatview_insert(view, i, &fr);
+    }
+}
+```
+
+FlatRange在FlatView中是按照地址升序来排列的,另外不存在地址重合的FlatRange.
+
+后面把结束地址小于MemoryRegion开始地址的FlatRange都排除掉,因为他们的地址和我们要生成的地址有冲突
+
+剩下的地址分为如下四种情况
+
+![2020-03-11-11-18-13.png](./images/2020-03-11-11-18-13.png)
+
+base 表示要生成的地址空间的开始 remin表示要生成地址空间的结尾
+
+start表示下一个要比较的地址空间的开始, end表示下一个要比较地址空间的结尾
+
+for循环中处理的就是图中的1, 2, 4.
+
+先把base到 min(remin, start) 这段地址生成一个FlatRange(不和其他地址重合)
+
+将剩余部分地址裁剪出来, 其实还有一部分FlatRange可能要生成新的FlatRange(end到remin)
+
+692-697 行主要把要生成的地址和现有的地址重合部分跳过
+
+695 - 698 行 重合的部分跳过,重合的部分生成FlatRange, 最后剩下的部分为现有FlatRange都不包含的部分, 则在 699-703 生成新的FlatRange插入
+
+#### 3.1.1.2. address_space_set_flatview(): 设置FlatView, 会调用KVM
+
+```cpp
+static void address_space_set_flatview(AddressSpace *as)
+{
+    FlatView *old_view = address_space_to_flatview(as);
+    MemoryRegion *physmr = memory_region_get_flatview_root(as->root);
+    FlatView *new_view = g_hash_table_lookup(flat_views, physmr);
+
+    assert(new_view);
+
+    if (old_view == new_view) {
+        return;
+    }
+
+    if (old_view) {
+        flatview_ref(old_view);
+    }
+
+    flatview_ref(new_view);
+
+    if (!QTAILQ_EMPTY(&as->listeners)) {
+        FlatView tmpview = { .nr = 0 }, *old_view2 = old_view;
+
+        if (!old_view2) {
+            old_view2 = &tmpview;
+        }
+        address_space_update_topology_pass(as, old_view2, new_view, false);
+        address_space_update_topology_pass(as, old_view2, new_view, true);
+    }
+
+    /* Writes are protected by the BQL.  */
+    atomic_rcu_set(&as->current_map, new_view);
+    if (old_view) {
+        flatview_unref(old_view);
+    }
+
+    /* Note that all the old MemoryRegions are still alive up to this
+     * point.  This relieves most MemoryListeners from the need to
+     * ref/unref the MemoryRegions they get---unless they use them
+     * outside the iothread mutex, in which case precise reference
+     * counting is necessary.
+     */
+    if (old_view) {
+        flatview_unref(old_view);
+    }
+}
+```
+
+会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**
+
+
+
+
 
 ```cpp
 static void address_space_update_topology(AddressSpace *as)
