--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -17,8 +17,8 @@
       - [4.2.2.1. memory_region_init_alias(): 初始化alias的mr, 不申请内存](#4221-memory_region_init_alias-初始化alias的mr-不申请内存)
       - [4.2.2.2. memory_region_add_subregion(): subregion注册到全局的system_memory](#4222-memory_region_add_subregion-subregion注册到全局的system_memory)
       - [3.1.1. address_space_update_topology(): 设置拓扑flatview](#311-address_space_update_topology-设置拓扑flatview)
-      - [3.1.1.1. generate_memory_topology(): 生成Flatview](#3111-generate_memory_topology-生成flatview)
-      - [3.1.1.2. address_space_set_flatview(): 设置FlatView, 会调用KVM](#3112-address_space_set_flatview-设置flatview-会调用kvm)
+        - [3.1.1.1. generate_memory_topology(): 生成新的Flatview](#3111-generate_memory_topology-生成新的flatview)
+        - [3.1.1.2. address_space_set_flatview(): 设置FlatView, 会调用KVM](#3112-address_space_set_flatview-设置flatview-会调用kvm)
 - [5. 新FlatRange的更新](#5-新flatrange的更新)
 - [6. 参考](#6-参考)
 
@@ -712,7 +712,7 @@ static void address_space_update_topology(AddressSpace *as)
 }
 ```
 
-##### 3.1.1.1. generate_memory_topology(): 生成Flatview
+##### 3.1.1.1. generate_memory_topology(): 生成新的Flatview
 
 ```cpp
 /* Render a memory topology into a list of disjoint absolute ranges. */
@@ -721,6 +721,7 @@ static FlatView *generate_memory_topology(MemoryRegion *mr)
     int i;
     FlatView *view;
 
+    /* 根据AddressSpace对应的MR生成一个新的FlatView */
     view = flatview_new(mr);
 
     if (mr) {
@@ -758,7 +759,6 @@ static FlatView *flatview_new(MemoryRegion *mr_root)
     view->root = mr_root;
     memory_region_ref(mr_root);
     trace_flatview_new(view, mr_root);
-
     return view;
 }
 ```
@@ -911,13 +911,14 @@ for循环中处理的就是图中的1, 2, 4.
 
 695 - 698 行 重合的部分跳过,重合的部分生成FlatRange, 最后剩下的部分为现有FlatRange都不包含的部分, 则在 699-703 生成新的FlatRange插入
 
-#### 3.1.1.2. address_space_set_flatview(): 设置FlatView, 会调用KVM
+##### 3.1.1.2. address_space_set_flatview(): 设置FlatView, 会调用KVM
 
 ```cpp
 static void address_space_set_flatview(AddressSpace *as)
 {
     FlatView *old_view = address_space_to_flatview(as);
     MemoryRegion *physmr = memory_region_get_flatview_root(as->root);
+    // 在哈希表flat_views中根据physmr(key)查找新的new_view
     FlatView *new_view = g_hash_table_lookup(flat_views, physmr);
 
     assert(new_view);
@@ -930,6 +931,7 @@ static void address_space_set_flatview(AddressSpace *as)
         flatview_ref(old_view);
     }
 
+    // 增加引用
     flatview_ref(new_view);
 
     if (!QTAILQ_EMPTY(&as->listeners)) {
@@ -943,6 +945,7 @@ static void address_space_set_flatview(AddressSpace *as)
     }
 
     /* Writes are protected by the BQL.  */
+    /* 设置新的FlatView */
     atomic_rcu_set(&as->current_map, new_view);
     if (old_view) {
         flatview_unref(old_view);
@@ -959,6 +962,10 @@ static void address_space_set_flatview(AddressSpace *as)
     }
 }
 ```
+
+在获取了**新旧两个FlatView**之后，调用了**两次**`address_space_update_topology_pass()`函数，首次调用重在**删除原来的**，而后者重在**添加**。之后设置`as->current_map = new_view`。并对`old_view`**减少引用**，当引用计数为1时会被删除。接下来重点在两个地方：1、如何根据一个MR获取对应的FlatView；2、如何对旧的FlatView进行更新。
+
+
 
 会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**
 
