--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1278,7 +1278,7 @@ static void address_space_update_topology_pass(AddressSpace *as,
 该函数比较长，咱们还是分段介绍
 
 ```cpp
-KVMState *s = kvm_state;
+    KVMState *s = kvm_state;
     KVMSlot *mem, old;
     int err;
     MemoryRegion *mr = section->mr;
@@ -1443,7 +1443,9 @@ ram = memory_region_get_ram_ptr(mr) + section->offset_within_region + delta;
 
 ![2020-02-28-23-33-06.png](./images/2020-02-28-23-33-06.png)
 
-如图所示，old region是找到的和new region重叠的slot，首次删除把整个slot都删除了，造成了region1部门很无辜的受伤，所以在映射时，要把region1在弥补上。而黑色部分就是实际删除的，这样接下来就可以直接映射new region了，如果多余的部分在后方，也是同样的道理。在把无辜被删除region映射之后，接下来就调用kvm_set_user_memory_region把new slot映射进去。基本思路就是这样。下面看下核心函数kvm_set_user_memory_region
+如图所示，old region是找到的和new region重叠的slot，首次删除把整个slot都删除了，造成了region1部门很无辜的受伤，所以在映射时，要把region1在弥补上。而黑色部分就是实际删除的，这样接下来就可以直接映射new region了，如果多余的部分在后方，也是同样的道理。在把无辜被删除region映射之后，接下来就调用kvm_set_user_memory_region把new slot映射进去。基本思路就是这样。
+
+下面看下核心函数kvm_set_user_memory_region
 
 
 ```cpp
@@ -1470,7 +1472,7 @@ static int kvm_set_user_memory_region(KVMState *s, KVMSlot *slot)
 }
 ```
 
-可以看到该函数实现也并不复杂，使用了一个kvm_userspace_memory_region对应，该结构本质上作为参数传递给KVM，只是由于不能共享堆栈，在KVM中需要把该结构复制到内核空间，代码本身没什么难度，只是这里如果是只读的mem,需要调用两次kvm_vm_ioctl，第一次设置mem的size为0.
+可以看到该函数实现也并不复杂，使用了一个kvm_userspace_memory_region对应，该结构本质上作为参数传递给KVM，只是由于不能共享堆栈，在KVM中需要把该结构复制到内核空间，代码本身没什么难度，只是这里如果是只读的mem, 需要调用两次kvm_vm_ioctl，第一次设置mem的size为0.
 
 至于为何这么做，咱们到分析KVM端的时候在做讨论。
 
