--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -735,7 +735,7 @@ static FlatView *generate_memory_topology(MemoryRegion *mr)
     }
     /*简化FlatView，将View中的FlatRange能合并的都合并*/
     flatview_simplify(view);
-
+    // dispatch 负责根据 GPA 找到 HVA
     view->dispatch = address_space_dispatch_new(view);
     for (i = 0; i < view->nr; i++) {
         MemoryRegionSection mrs =
