--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -366,7 +366,9 @@ void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
 }
 ```
 
-该函数实现很简单，首先调用`memory_region_init`对**MR**做**初始化**。然后进行简单的设置，最重要的还是最后的`qemu_ram_alloc`, 最终调用`qemu_ram_alloc_internal()`
+该函数实现很简单，首先调用`memory_region_init`对**MR**做**初始化**。
+
+然后进行简单的设置，最重要的还是最后的`qemu_ram_alloc`, 最终调用`qemu_ram_alloc_internal()`
 
 ```cpp
 RAMBlock *qemu_ram_alloc(ram_addr_t size, bool share,
