--- Auto-Git Commit ---

--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -158,7 +158,7 @@ int main()
  |           ├─ kvmclock_create()
  |           ├─ pc_memory_init() // 【4】内存初始化，从 QEMU 进程的地址空间中进行实际的内存分配
  |           |   ├─ MemoryRegion *ram = g_malloc(sizeof(*ram)); // 新建MR, "pc.ram"
- |           |   ├─ memory_region_allocate_system_memory(ram, NULL, "pc.ram", machine->ram_size); // 创建 pc.ram, pc.rom 并分配内存
+ |           |   ├─ memory_region_allocate_system_memory(ram, NULL, "pc.ram", machine->ram_size); // 创建 pc.ram, pc.rom 并真正分配内存, ram_size是虚拟机的真正内存大小
  |           |   |   └─ allocate_system_memory_nonnuma()
  |           |   |       |─ memory_region_init_ram_nomigrate()
  |           |   |       |   |─ memory_region_init(mr, owner, name, size);
@@ -167,7 +167,7 @@ int main()
  |           |   |       |           |─ RAMBlock = g_malloc0(sizeof(*new_block)); // 创建RAMBlock并且初始化
  |           |   |       |           └─ ram_block_add(); // 
  |           |   |       |               |─ new_block->offset = find_ram_offset(new_block->max_length); // 遍历全局ram_list所有区块, 找到满足长度的空间, 并将ramblock安插进去
- |           |   |       |               |─ new_block->host = phys_mem_alloc(new_block->max_length, &new_block->mr->align, shared); // 在host上分配虚拟内存
+ |           |   |       |               |─ new_block->host = phys_mem_alloc(new_block->max_length, &new_block->mr->align, shared); // 在host上真正分配虚拟内存
  |           |   |       |               |─ memory_try_enable_merging(new_block->host, new_block->max_length); // 
  |           |   |       └─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
  |           |   |           └─ vmstate_register_ram()
