--- Auto-Git Commit ---

--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -193,6 +193,8 @@ int main()
  |           |   |                └─ address_space_update_ioeventfds()  
  |           |   ├─ e820_add_entry(0, x86ms->below_4g_mem_size, E820_RAM)    // 
  |           |   ├─ machine->device_memory = g_malloc0();    // device memory
+ |           |   ├─ memory_region_init(&machine->device_memory->mr, OBJECT(pcms), "device-memory", device_mem_size);   // device memory
+ |           |   ├─ machine->device_memory = g_malloc0();    // device memory
  |           |
  |           ├─ i440fx_init()
  |           ├─ ioapic_init(gsi_state)
