--- Auto-Git Commit ---

--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -110,7 +110,7 @@ int main()
  |   |   |   |       |   └─ kvm_region_add()        // region_add 对应的回调实现
  |   |   |   |       |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot
  |   |   |   |       |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
- |   |   |   |       |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION)
+ |   |   |   |       |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION) // 与KVM交互
  |   |   |   |       |
  |   |   |   └─ address_space_update_ioeventfds(as)   
  |   |   |
@@ -194,7 +194,10 @@ int main()
  |           |   ├─ e820_add_entry(0, x86ms->below_4g_mem_size, E820_RAM)    // 
  |           |   ├─ machine->device_memory = g_malloc0();    // device memory
  |           |   ├─ memory_region_init(&machine->device_memory->mr, OBJECT(pcms), "device-memory", device_mem_size);   // device memory
- |           |   ├─ machine->device_memory = g_malloc0();    // device memory
+ |           |   ├─ memory_region_add_subregion(system_memory, machine->device_memory->base, &machine->device_memory->mr);    // device memory
+ |           |   ├─ pc_system_firmware_init();    // PC 系统固件初始化
+ |           |   ├─ MemoryRegion *option_rom_mr = g_malloc(sizeof(*option_rom_mr)); // 新建MR, "pc.ram"
+ |           |   ├─ memory_region_init_ram(option_rom_mr, NULL, "pc.rom", PC_ROM_SIZE, &error_fatal);   // pc.rom
  |           |
  |           ├─ i440fx_init()
  |           ├─ ioapic_init(gsi_state)
