--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -692,9 +692,11 @@ void memory_region_transaction_commit(void)
 }
 ```
 
-可以看到，这里listener的作用就凸显出来了。对于**每个address_space**，调用address_space_update_topology()执行更新。里面涉及两个重要的函数generate_memory_topology和address_space_update_topology_pass。前者对于一个给定的MR，生成其对应的FlatView，而后者则根据oldview和newview对当前视图进行更新。
+可以看到，这里listener的作用就凸显出来了。
 
-我们还是看下address_space_update_topology函数代码
+对于**每个address_space！！！**，调用`address_space_update_topology()`执行更新。里面涉及两个重要的函数`generate_memory_topology`和`address_space_update_topology_pass`。前者对于**一个给定的MR**，生成其**对应的FlatView**，而后者则根据**oldview**和**newview**对当前视图进行更新。
+
+我们还是看下`address_space_update_topology`函数代码
 
 #### 3.1.1. address_space_update_topology(): 设置拓扑flatview
 
@@ -736,7 +738,7 @@ static FlatView *generate_memory_topology(MemoryRegion *mr)
                              addrrange_make(int128_zero(), int128_2_64()),
                              false, false);
     }
-    /*简化FlatView，将View中的FlatRange能合并的都合并*/
+    /* 简化FlatView，将View中的FlatRange能合并的都合并 */
     flatview_simplify(view);
     // dispatch 负责根据 GPA 找到 HVA
     view->dispatch = address_space_dispatch_new(view);
