--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -17,7 +17,7 @@
       - [4.2.2.1. memory_region_init_alias(): 初始化alias的mr, 不申请内存](#4221-memory_region_init_alias-初始化alias的mr-不申请内存)
       - [4.2.2.2. memory_region_add_subregion(): subregion注册到全局的system_memory](#4222-memory_region_add_subregion-subregion注册到全局的system_memory)
       - [3.1.1. address_space_update_topology(): 设置拓扑flatview](#311-address_space_update_topology-设置拓扑flatview)
-        - [3.1.1.1. generate_memory_topology(): 生成新的Flatview](#3111-generate_memory_topology-生成新的flatview)
+        - [3.1.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview](#3111-generate_memory_topologymr-根据给定的mr生成新的flatview)
         - [3.1.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#3112-address_space_set_flatview-设置as的flatview-会调用kvm)
 - [5. 新FlatRange的更新](#5-新flatrange的更新)
 - [6. 参考](#6-参考)
@@ -694,9 +694,7 @@ void memory_region_transaction_commit(void)
 
 可以看到，这里listener的作用就凸显出来了。
 
-对于**每个address_space！！！**，调用`address_space_update_topology()`执行更新。里面涉及两个重要的函数`generate_memory_topology`和`address_space_update_topology_pass`。前者对于**一个给定的MR**，生成其**对应的FlatView**，而后者则根据**oldview**和**newview**对当前视图进行更新。
-
-我们还是看下`address_space_update_topology`函数代码
+对于**每个address_space！！！**，调用`address_space_update_topology()`执行更新。
 
 #### 3.1.1. address_space_update_topology(): 设置拓扑flatview
 
@@ -717,7 +715,11 @@ static void address_space_update_topology(AddressSpace *as)
 }
 ```
 
-##### 3.1.1.1. generate_memory_topology(): 生成新的Flatview
+里面涉及两个重要的函数`generate_memory_topology`和`address_space_update_topology_pass`。
+
+前者对于**一个给定的MR**，生成其**对应的FlatView**，而后者则根据**oldview**和**newview**对当前视图进行更新。
+
+##### 3.1.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview
 
 ```cpp
 /* Render a memory topology into a list of disjoint absolute ranges. */
@@ -748,6 +750,7 @@ static FlatView *generate_memory_topology(MemoryRegion *mr)
         flatview_add_to_dispatch(view, &mrs);
     }
     address_space_dispatch_compact(view->dispatch);
+    // 更新flatview的哈希表 flat_views
     g_hash_table_replace(flat_views, mr, view);
 
     return view;
@@ -770,7 +773,7 @@ static FlatView *flatview_new(MemoryRegion *mr_root)
 
 调用`render_memory_region()`:
 
-- 函数的参数为 `FlatView *view`, 代表线性空间试图,维护MemoryRegion和 线性地址的关系(用于gpa→hva的转换)
+- 函数的参数为 `FlatView *view`, 代表线性空间视图,维护**MemoryRegion**和 **线性地址**的关系(用于**gpa→hva**的转换)
 
 - `MemoryRegion *mr` 则为要渲染的MemoryRegion
 - base 标示该MemoryRegion对应最根层MemoryRegion的偏移(最根层的偏移一般为0 ,现在已知的就 system_memory 和 system_io两个地址空间, 分别代表内存空间和io空间), 这里为0
