--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -16,7 +16,7 @@
     - [4.2.2. 从pc.ram中划分并加入system_memory的subregion](#422-从pcram中划分并加入system_memory的subregion)
       - [4.2.2.1. memory_region_init_alias(): 初始化alias的mr, 不申请内存](#4221-memory_region_init_alias-初始化alias的mr-不申请内存)
       - [4.2.2.2. memory_region_add_subregion(): subregion注册到全局的system_memory](#4222-memory_region_add_subregion-subregion注册到全局的system_memory)
-      - [3.1.1. address_space_update_topology(): 设置拓扑flatview](#311-address_space_update_topology-设置拓扑flatview)
+      - [3.1.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互](#311-address_space_update_topology-设置拓扑flatview-会与kvm交互)
         - [3.1.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview](#3111-generate_memory_topologymr-根据给定的mr生成新的flatview)
         - [3.1.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#3112-address_space_set_flatview-设置as的flatview-会调用kvm)
 - [5. 新FlatRange的更新](#5-新flatrange的更新)
@@ -696,7 +696,7 @@ void memory_region_transaction_commit(void)
 
 对于**每个address_space！！！**，调用`address_space_update_topology()`执行更新。
 
-#### 3.1.1. address_space_update_topology(): 设置拓扑flatview
+#### 3.1.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互
 
 这个在`address_space_init()`时候也会调用
 
@@ -777,7 +777,7 @@ static FlatView *flatview_new(MemoryRegion *mr_root)
 
 - `MemoryRegion *mr` 则为要渲染的MemoryRegion
 - base 标示该MemoryRegion对应最根层MemoryRegion的偏移(最根层的偏移一般为0 ,现在已知的就 system_memory 和 system_io两个地址空间, 分别代表内存空间和io空间), 这里为0
-- clip 表示**父空间的地址范围**, 子空间的地址范围是不允许落在父空间的范围外的, 如下
+- clip 表示**父空间的地址范围**, 子空间的地址范围是不允许落在父空间的范围外的, 如
 
 ```cpp
 (AddrRange){0, 2^64};
