--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -145,7 +145,7 @@ struct MemoryRegion {
     RAMBlock *ram_block;
     // 拥有者
     Object *owner;
-    // 与MemoryRegion相关的操作
+    // 与MemoryRegion相关的操作的回调函数
     const MemoryRegionOps *ops;
     void *opaque;
     // 指向父MR
@@ -164,10 +164,11 @@ struct MemoryRegion {
     bool enabled;
     bool warning_printed; /* For reservations */
     uint8_t vga_logging_count;
-    // 对于子区域, 指向原始的MR, 即从哪个MR中划分的
+    // 如果本mr是alias, 指向真实的MR, 即从哪个MR中划分的
     MemoryRegion *alias;
-    // 在原始MR中的偏移
+    // 在真实MR中的偏移
     hwaddr alias_offset;
+    // 优先级，属于同一个mr的subregions中高优先级的mr会被优先渲染 
     int32_t priority;
     // 子区域链表头
     QTAILQ_HEAD(, MemoryRegion) subregions;
