--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -776,8 +776,8 @@ static FlatView *flatview_new(MemoryRegion *mr_root)
 - 函数的参数为 `FlatView *view`, 代表线性空间视图,维护**MemoryRegion**和 **线性地址**的关系(用于**gpa→hva**的转换)
 
 - `MemoryRegion *mr` 则为要渲染的MemoryRegion
-- base 标示该MemoryRegion对应最根层MemoryRegion的偏移(最根层的偏移一般为0 ,现在已知的就 system_memory 和 system_io两个地址空间, 分别代表内存空间和io空间), 这里为0
-- clip 表示**父空间的地址范围**, 子空间的地址范围是不允许落在父空间的范围外的, 如
+- base 标示该MemoryRegion对应最根层MemoryRegion的偏移(最根层的偏移一般为0 ,现在已知的就 system_memory 和 system_io两个地址空间, 分别代表内存空间和io空间), 这里为0, GPA
+- clip 表示**父空间的地址范围**, 子空间的地址范围是不允许落在父空间的范围外的, 如第一次render
 
 ```cpp
 (AddrRange){0, 2^64};
@@ -796,8 +796,11 @@ static void render_memory_region(FlatView *view,
 {
     MemoryRegion *subregion;
     unsigned i;
+    // 在region中的偏移
     hwaddr offset_in_region;
+    // 待展开的内存的长度
     Int128 remain;
+    // 本次展开的长度或跳过的长度
     Int128 now;
     FlatRange fr;
     AddrRange tmp;
@@ -805,8 +808,9 @@ static void render_memory_region(FlatView *view,
     if (!mr->enabled) {
         return;
     }
+    // base
     // mr的addr什么时候初始化的?
-    // base = base + mr->addr
+    // base改为MR的起始地址, addr实际上是subregion在父mr中的偏移, base = base + mr->addr
     int128_addto(&base, int128_make64(mr->addr));
     //它的读写模式就是mr的读写模式
     readonly |= mr->readonly;
