--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -119,18 +119,6 @@ static void memory_map_init(void)
 
 首先MemoryRegion有两种,一种为**纯容器**(逻辑上的概念),一种为**物理内存**(物理内存又有几种: mmio内存. ram, rom, ioport),
 
-qemu要把**MemoryRegion**映射到cpu看到的**线性地址上**(**AddressSpace**), 但是有些情况**两个设备**的内存映射到**相同的线性地址**, 比如mmio. 举个例子,对于一个**内存条是4g**, 它的线性地址为**0-4g**, 但是**vga设备**的内存地址通过**mmio映射**到**线性地址**的`768k–(768+256k)`, 这种情况应该使vga的线性地址覆盖掉ram的`768k–(768+256k)`地址,这样写vga地址才能成功.
-
-**FlatRang**则表示一个MemoryRegion映射到线性空间的一段地址.
-
-qemu内存建模是通过**优先级**来实现**内存地址的覆盖**, 优先级高的MemoryRegion 先被转换为 FlatRang, 后面渲染的时候低优先级的FlatRang不覆盖高优先级的FlatRang, 低优先级的FlatRang如果被高优先级的FlatRang截断则只保存不被高优先级遮盖的部分到flatview, 这是`render_memory_region` 的677行到704行的主要工作
-
-MemoryRegion 的terminates 变量如果为false表示它是一个纯容器, 纯容器自身没有线性地址(只规定一个偏移和大小来限制子区域线性地址的取值), 通过子region来生成线性地址, 所以纯容器所规定的线性地址空间可能留下空洞,会被其他低优先级的MemoryRegion所填充MemoryRegion的addr 变量表示相对于父容器的偏移, 和大小,FlatRange的offset_in_region 变量表示该FlatRange相对所在MemoryRegion的位置(因为一个MemoryRegion可能被高优先级的MemoryRegion截断成多段,所以offset_in_region不一定为0)
-
-fr.addr 标示该FlatRange在线性地址空间的偏移
-
-
-
 地址空间即CPU所能看到的空间，包括Io空间和memory空间，IO空间使用in、out指令访问，有回掉函数。Memory空间使用mov等指令访问。
 
 所以在函数起始，就对`system_memory`分配了内存，然后调用了`memory_region_init`函数对其进行初始化，其中**size**设置为**整个地址空间**：如果是**64位**就是`2^64`.
@@ -353,6 +341,7 @@ void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
     // 这个mr就是为系统内存重新分配的, 这里只是初始化
     memory_region_init(mr, owner, name, size);
     mr->ram = true;
+    // 不是纯容器
     mr->terminates = true;
     mr->destructor = memory_region_destructor_ram;
     // 分配了具体的内存, 主机虚拟内存
@@ -771,13 +760,23 @@ static FlatView *flatview_new(MemoryRegion *mr_root)
 }
 ```
 
+qemu要把**MemoryRegion**映射到cpu看到的**线性地址上**(**AddressSpace**), 但是有些情况**两个设备**的内存映射到**相同的线性地址**, 比如mmio. 举个例子,对于一个**内存条是4g**, 它的线性地址为**0-4g**, 但是**vga设备**的内存地址通过**mmio映射**到**线性地址**的`768k–(768+256k)`, 这种情况应该使vga的线性地址覆盖掉ram的`768k–(768+256k)`地址,这样写vga地址才能成功.
+
+**FlatRang**则表示一个MemoryRegion映射到线性空间的一段地址.
+
+qemu内存建模是通过**优先级**来实现**内存地址的覆盖**, 优先级高的MemoryRegion 先被转换为 **FlatRang**, 后面渲染的时候**低优先级**的FlatRang**不覆盖高优先级**的FlatRang, **低优先级**的**FlatRang**如果被**高优先级**的FlatRang**截断**则**只保存**不被高优先级遮盖的部分到flatview, 这是`render_memory_region` 的677行到704行的主要工作
+
+MemoryRegion 的terminates 变量如果为false表示它是一个**纯容器**, 纯容器自身**没有线性地址**(只规定一个偏移和大小来限制子区域线性地址的取值), 通过子region来生成线性地址, 所以纯容器所规定的线性地址空间可能留下空洞,会被其他低优先级的MemoryRegion所填充MemoryRegion的addr 变量表示相对于父容器的偏移, 和大小,FlatRange的offset_in_region 变量表示该FlatRange相对所在MemoryRegion的位置(因为一个MemoryRegion可能被高优先级的MemoryRegion截断成多段,所以offset_in_region不一定为0)
+
+fr.addr 标示该FlatRange在线性地址空间的偏移
+
 调用`render_memory_region()`:
 
 - 函数的参数为 `FlatView *view`, 代表线性空间视图,维护**MemoryRegion**和 **线性地址**的关系(用于**gpa→hva**的转换)
 
 - `MemoryRegion *mr` 则为要渲染的MemoryRegion
 - base 标示该MemoryRegion对应最根层MemoryRegion的偏移(最根层的偏移一般为0 ,现在已知的就 system_memory 和 system_io两个地址空间, 分别代表内存空间和io空间), 这里为0, GPA
-- clip 表示**父空间的地址范围**, 子空间的地址范围是不允许落在父空间的范围外的, 如第一次render
+- clip 表示**父空间的地址范围**, 子空间的地址范围是不允许落在父空间的范围外的, 如第一次render时clip代表了整个虚拟机物理地址空间
 
 ```cpp
 (AddrRange){0, 2^64};
