--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -8,7 +8,7 @@
 - [3. 全局的系统AS和MR的初始化: 不分配GPA/HVA](#3-全局的系统as和mr的初始化-不分配gpahva)
   - [3.1. address_space_init(): 整个AS初始化](#31-address_space_init-整个as初始化)
 - [4. 实际内存的分配GPA/HVA](#4-实际内存的分配gpahva)
-  - [4.1. 分配整体内存全局MR(pc.ram): memory_region_allocate_system_memory](#41-分配整体内存全局mrpcram-memory_region_allocate_system_memory)
+  - [4.1. 分配内存(pc.ram, pc.rom): memory_region_allocate_system_memory](#41-分配内存pcram-pcrom-memory_region_allocate_system_memory)
     - [4.1.1. memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#411-memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
     - [4.1.2. vmstate_register_ram_global(): ramblock与mr关联](#412-vmstate_register_ram_global-ramblock与mr关联)
   - [4.2. 将整体mr(pc.ram)划分为两个子MR(subregion): 不再申请内存, 即不关联host虚拟内存(HVA)](#42-将整体mrpcram划分为两个子mrsubregion-不再申请内存-即不关联host虚拟内存hva)
@@ -311,13 +311,13 @@ void pc_memory_init(PCMachineState *pcms,
 
 从总体上来讲，该函数主要完成了三个工作：
 
-1. 为pc.ram和pc.rom都生成新的MR, 并**分配全局ram**（一整个memory region）
+1. 为pc.ram和pc.rom都生成新的MR, 并**分配内存**（一整个memory region）
 
-2. 然后根据`below_4g_mem_size`、`above_4g_mem_size`分别对**ram进行划分**，形成**子MR**，并注册**子MR**到**root MR system_memory 的subregions链表**中。
+2. 然后根据`below_4g_mem_size`、`above_4g_mem_size`分别对**pc.ram进行划分**，形成**子MR**，并注册**子MR**到**root MR system_memory 的subregions链表**中。
 
-3. 最后需要调用`memory_region_transaction_commit()`函数提交修改。
+3. 最后需要调用`memory_region_transaction_commit()`函数提交修改.
 
-## 4.1. 分配整体内存全局MR(pc.ram): memory_region_allocate_system_memory
+## 4.1. 分配内存(pc.ram, pc.rom): memory_region_allocate_system_memory
 
 为虚拟机内存"pc.ram"和"pc.rom"都分别生成了新的MR, 然后分配内存, 这里看"pc.ram"的内存分配`memory_region_allocate_system_memory(ram, NULL, "pc.ram", machine->ram_size);`, 对于非大页最终会调用到函数`memory_region_init_ram_shared_nomigrate()`
 
