--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -169,7 +169,7 @@ int main()
  |           |   |       |               |─ new_block->offset = find_ram_offset(new_block->max_length); // 遍历全局ram_list所有区块, 找到满足长度的空间, 并将ramblock安插进去
  |           |   |       |               |─ new_block->host = phys_mem_alloc(new_block->max_length, &new_block->mr->align, shared); // 在host上真正分配虚拟内存
  |           |   |       |               |─ memory_try_enable_merging(new_block->host, new_block->max_length); // 
- |           |   |       └─ vmstate_register_ram_global() // 将 MR 的 name 写入 RAMBlock 的 idstr
+ |           |   |       └─ vmstate_register_ram_global() // ramblock与mr关联, 将 MR 的 name 写入 RAMBlock 的 idstr
  |           |   |           └─ vmstate_register_ram()
  |           |   |               └─ qemu_ram_set_idstr()
  |           |   |
