--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -322,8 +322,9 @@ void pc_memory_init(PCMachineState *pcms,
 为虚拟机内存"pc.ram"和"pc.rom"都分别生成了新的MR, 然后分配内存, 这里看"pc.ram"的内存分配`memory_region_allocate_system_memory(ram, NULL, "pc.ram", machine->ram_size);`, 对于非大页最终会调用到函数`memory_region_init_ram_shared_nomigrate()`
 
 ```cpp
-allocate_system_memory_nonuma()
-    |- memory_region_init_ram_shared_nomigrate()
+memory_region_allocate_system_memory()
+    allocate_system_memory_nonuma()
+    | └- memory_region_init_ram_shared_nomigrate()
     └- vmstate_register_ram_global();
 ```
 
@@ -340,11 +341,12 @@ void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
     Error *err = NULL;
     // 这个mr就是为系统内存重新分配的, 这里只是初始化
     memory_region_init(mr, owner, name, size);
+    // 是ram
     mr->ram = true;
     // 不是纯容器
     mr->terminates = true;
     mr->destructor = memory_region_destructor_ram;
-    // 分配了具体的内存, 主机虚拟内存
+    // 分配了具体的内存, 主机虚拟内存, 返回RAMBlock
     mr->ram_block = qemu_ram_alloc(size, share, mr, &err);
     mr->dirty_log_mask = tcg_enabled() ? (1 << DIRTY_MEMORY_CODE) : 0;
     if (err) {
@@ -357,16 +359,10 @@ void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
 
 该函数实现很简单，首先调用`memory_region_init`对**MR**做**初始化**。
 
-然后进行简单的设置，最重要的还是最后的`qemu_ram_alloc`, 最终调用`qemu_ram_alloc_internal()`
+然后进行简单的设置，最重要的还是最后的`qemu_ram_alloc`, 最终调用`qemu_ram_alloc_internal(size, size, NULL, NULL, false, share, mr, errp)`
 
 ```cpp
-RAMBlock *qemu_ram_alloc(ram_addr_t size, bool share,
-                         MemoryRegion *mr, Error **errp)
-{
-    return qemu_ram_alloc_internal(size, size, NULL, NULL, false,
-                                   share, mr, errp);
-}
-
+// exec.c
 static
 RAMBlock *qemu_ram_alloc_internal(ram_addr_t size, ram_addr_t max_size,
                                   void (*resized)(const char*,
@@ -377,10 +373,12 @@ RAMBlock *qemu_ram_alloc_internal(ram_addr_t size, ram_addr_t max_size,
 {
     RAMBlock *new_block;
     Error *local_err = NULL;
-
+    // 
     size = HOST_PAGE_ALIGN(size);
     max_size = HOST_PAGE_ALIGN(max_size);
+    // RAMBlock 生成
     new_block = g_malloc0(sizeof(*new_block));
+    // 指向pc.ram/pc.rom
     new_block->mr = mr;
     new_block->resized = resized;
     new_block->used_length = size;
