--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -373,19 +373,24 @@ RAMBlock *qemu_ram_alloc_internal(ram_addr_t size, ram_addr_t max_size,
 {
     RAMBlock *new_block;
     Error *local_err = NULL;
-    // 
+    // 根据主机页面对齐
     size = HOST_PAGE_ALIGN(size);
     max_size = HOST_PAGE_ALIGN(max_size);
     // RAMBlock 生成
     new_block = g_malloc0(sizeof(*new_block));
     // 指向pc.ram/pc.rom
     new_block->mr = mr;
+    // NULL
     new_block->resized = resized;
+    // 已使用长度, 等于
     new_block->used_length = size;
     new_block->max_length = max_size;
     assert(max_size >= size);
+    // 映射文件描述符
     new_block->fd = -1;
+    // 页面大小
     new_block->page_size = qemu_real_host_page_size;
+    // 这里是NULL
     new_block->host = host;
     if (host) {
         new_block->flags |= RAM_PREALLOC;
@@ -393,7 +398,7 @@ RAMBlock *qemu_ram_alloc_internal(ram_addr_t size, ram_addr_t max_size,
     if (resizeable) {
         new_block->flags |= RAM_RESIZEABLE;
     }
-    // 添加该ramblock
+    // 添加该ramblock, 里面从host上分配内存
     ram_block_add(new_block, &local_err, share);
     if (local_err) {
         g_free(new_block);
@@ -415,7 +420,7 @@ static void ram_block_add(RAMBlock *new_block, Error **errp, bool shared)
     qemu_mutex_lock_ramlist();
     // 在虚拟机物理地址空间的偏移
     new_block->offset = find_ram_offset(new_block->max_length);
-
+    // 还没分配, 所以会进入
     if (!new_block->host) {
         if (xen_enabled()) {
             xen_ram_alloc(new_block->offset, new_block->max_length,
@@ -426,7 +431,7 @@ static void ram_block_add(RAMBlock *new_block, Error **errp, bool shared)
                 return;
             }
         } else {
-            // 在host上分配虚拟内存
+            // 在host上分配虚拟内存, 其实就是alloc()函数
             new_block->host = phys_mem_alloc(new_block->max_length,
                                              &new_block->mr->align, shared);
             if (!new_block->host) {
