--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -148,11 +148,12 @@ struct MemoryRegion {
     // 与MemoryRegion相关的操作的回调函数
     const MemoryRegionOps *ops;
     void *opaque;
-    // 指向父MR
+    // 指向挂载的上一级mr
     MemoryRegion *container;
-    // 在AddressSpace中区域的大小
+    // mr的大小  
     Int128 size;
     //在AddressSpace中的地址, GPA
+    // 相对父mr的偏移，起始GPA=base+addr 可以去源码中搜索一下如何初始化的就明白了
     hwaddr addr;
     void (*destructor)(MemoryRegion *mr);
     uint64_t align;
