--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -15,7 +15,7 @@
     - [4.2.1. 计算above_4g_mem_size和below_4g_mem_size](#421-计算above_4g_mem_size和below_4g_mem_size)
     - [4.2.2. 从pc.ram中划分并加入system_memory的subregion](#422-从pcram中划分并加入system_memory的subregion)
       - [4.2.2.1. memory_region_init_alias(): 初始化alias的mr, 不申请内存](#4221-memory_region_init_alias-初始化alias的mr-不申请内存)
-      - [4.2.2.2. memory_region_add_subregion(): subregion注册到全局的system_memory](#4222-memory_region_add_subregion-subregion注册到全局的system_memory)
+      - [4.2.2.2. memory_region_add_subregion(): subregion注册到全局的system_memory(不是pc.ram)](#4222-memory_region_add_subregion-subregion注册到全局的system_memory不是pcram)
       - [3.1.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互](#311-address_space_update_topology-设置拓扑flatview-会与kvm交互)
         - [3.1.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview](#3111-generate_memory_topologymr-根据给定的mr生成新的flatview)
         - [3.1.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#3112-address_space_set_flatview-设置as的flatview-会调用kvm)
@@ -595,7 +595,7 @@ void memory_region_init_alias(MemoryRegion *mr,
 
 12月16日
 
-#### 4.2.2.2. memory_region_add_subregion(): subregion注册到全局的system_memory
+#### 4.2.2.2. memory_region_add_subregion(): subregion注册到全局的system_memory(不是pc.ram)
 
 在初始化完毕，需要调用`memory_region_add_subregion()`函数把**子MR**注册到**全局的system_memory**。该函数实现是比较简单的，但是需要重点介绍下，因为这里执行了关键的更新操作。
 
@@ -607,6 +607,7 @@ void memory_region_add_subregion(MemoryRegion *mr,
                                  hwaddr offset,
                                  MemoryRegion *subregion)
 {
+    // 优先级
     subregion->priority = 0;
     memory_region_add_subregion_common(mr, offset, subregion);
 }
